# llm-wiki-agent

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  run_budget.yaml
.github/workflows/: ci.yml
docs/: architecture.md  company-lore.md  dependency-policy.md  final-project.md  handoff-template.md  obsidian-setup.md  roadmap.md  runbook.md  tool-contracts.md  troubleshooting.md  trust-boundaries.md  wiki-schema.md
docs/milestones/: TEMPLATE.md  m0.md  m1.md  m2.md  m3.md
fixtures/docs/: README.md
fixtures/evals/: README.md  cases.json
fixtures/queries/: m0_query.json
notebooks/: 01_context_packet.ipynb  02_context_surfaces.ipynb  03_context_budget.ipynb  04_context_builder.ipynb  05_responses_api_context_call.ipynb  README.md
scripts/: README.md
src/kb_agent/: __init__.py
src/kb_agent/adapters/: __init__.py  embeddings.py  llm.py  openai_responses.py
src/kb_agent/agent/: __init__.py  loop.py  planner.py  prompts.py  schemas.py
src/kb_agent/app/: __init__.py  cli.py  eval_cli.py  settings.py
src/kb_agent/evals/: __init__.py  dataset.py  harness.py  score.py
src/kb_agent/health/: __init__.py  checks.py
src/kb_agent/retrieval/: __init__.py  chunking.py  context_packet.py  loader.py  rerank.py  search.py
tests/: test_demo.py  test_evals.py  test_openai_responses_adapter.py  test_tool_contracts.py
vault/raw/: capacity-planning-q2.md  company-brief.md  context-engineering.md  customer-call-lumen-labs.md  incident-aurora-17.md  market-competitors.md  pricing-margin-memo.md  runtime-traces.md
(+14 files in other folders)
